--- a/src/common/header/header.scss
+++ b/src/common/header/header.scss
@@ -69,6 +69,21 @@
         &:hover {
             color: var(--theme-primary-text);
         }
+
+        &.shopping {
+            position: relative;
+
+            .header__action-btn-count {
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                background-color: var(--theme-primary-background);
+                color: var(--theme-light-text);
+                border-radius: 50%;
+                padding: 0 5px;
+                font-size: 12px;
+            }
+        }
     }
 
     &__menu-toggle {
